# swag-labs-test

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  test_cart.py  test_checkout.py  test_login.py  test_logout.py  test_products.py
.github/workflows/: ci.yml
features/: cart.feature  checkout.feature  inventory.feature  login.feature  logout.feature  products.feature
pages/: cart_page.py  checkout_page.py  inventory_page.py  login_page.py  products_page.py
tests/: conftest.py
tests/cart/: test_cart.py
tests/checkout/: test_checkout.py
tests/inventory/: test_inventory.py
tests/login/: test_login.py
utils/: constants.py
